This is bouncing ball animation

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bouncing Ball Animation</title>
+  <!-- Link external CSS file -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    V1
+  <div class="ball"></div>
+  <div class="shadow"></div>
 </body>
 </html>
