--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bouncing Ball Animations</title>
+  <title>Bouncing Ball Animations V1 </title>
   <!-- Link external CSS file -->
   <link rel="stylesheet" href="style.css">
 </head>
